<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/bcimg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_app"
        style="@style/MainTitleStyle" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        style="@style/MainCardStyle"
        android:background="@color/colorCardBc">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="16dp"
            android:background="@color/colorCardBc">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/wellcome"
                android:textColor="@color/default_text_color"
                android:textSize="30sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/please_enter_your_name"
                android:textColor="@color/default_text_color"
                android:textSize="15sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
<!--                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">-->

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/nameTVId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/default_text_color"
                    android:hint="@string/name"
                    android:textColorHint="@color/default_text_color">

                </androidx.appcompat.widget.AppCompatEditText>

                <Button
                    android:id="@+id/startBtn"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="16dp"
                    android:background="@color/start_btn_color"
                    android:text="@string/start"
                    android:textSize="16sp"
                    android:textColor="@android:color/white">

                </Button>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

</LinearLayout>