<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".QuestionsActivity"
    android:background="@drawable/bcimg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical"
        android:padding="2dp">

        <TextView
            android:id="@+id/questionTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/no_content"
            android:textColor="@android:color/white"
            android:textSize="22sp"/>

        <ImageView
            android:id="@+id/flagImage"
            android:layout_width="wrap_content"
            android:layout_height="218dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/image_content_description"
            android:src="@drawable/noimage" />

        <LinearLayout
            android:id="@+id/ProgLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@color/start_btn_color">

            <ProgressBar
                android:id="@+id/progBarId"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:indeterminate="false"
                android:max="8"
                android:minHeight="50dp"
                android:progress="0" />

            <TextView
                android:id="@+id/progText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:text="0/10"
                android:textColorHint="@color/default_text_color"
                android:textSize="14sp"
                android:textColor="@android:color/white"/>

        </LinearLayout>

        <TextView
            android:id="@+id/optionOneTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/default_option_border"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/no_option"
            android:textColor="@color/default_text_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/optionTwoTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/default_option_border"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/no_option"
            android:textColor="@color/default_text_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/optionThreeTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/default_option_border"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/no_option"
            android:textColor="@color/default_text_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/optionFourTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/default_option_border"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/no_option"
            android:textColor="@color/default_text_color"
            android:textSize="18sp" />

        <Button
            android:id="@+id/submitID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/start_btn_color"
            android:text="@string/submit"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</ScrollView>